[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/pausemenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/Roboto-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 770.0
margin_top = 421.0
margin_right = 1150.0
margin_bottom = 659.0

[node name="GamePausedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1

[node name="ResumeGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 380.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Resume Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 488.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitToCharacterSelectButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 488.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Quit to Character Select"

[node name="QuitToMainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 380.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Quit to Main Menu"

[node name="QuitToDesktopButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 380.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 2 )
text = "Quit to Desktop"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeGameButton" to="." method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/QuitToCharacterSelectButton" to="." method="_on_QuitToCharacterSelectButton_button_down"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToDesktopButton" to="." method="_on_QuitToMainMenuButton_pressed"]
